// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/report existing report finished report 1`] = `
{
  "affixes": [
    9,
    7,
    13,
    128,
  ],
  "endTime": 1639499706988,
  "fights": [
    {
      "averageItemLevel": 249.4,
      "dungeon": 2285,
      "id": 1,
      "keystoneBonus": 1,
      "keystoneLevel": 23,
      "keystoneTime": 2035534,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 166,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2286,
      "id": 2,
      "keystoneBonus": 2,
      "keystoneLevel": 23,
      "keystoneTime": 1700172,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 167,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2289,
      "id": 3,
      "keystoneBonus": 1,
      "keystoneLevel": 24,
      "keystoneTime": 2126854,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 170,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2286,
      "id": 4,
      "keystoneBonus": 1,
      "keystoneLevel": 25,
      "keystoneTime": 1917470,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 176,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2285,
      "id": 5,
      "keystoneBonus": 1,
      "keystoneLevel": 25,
      "keystoneTime": 2339707,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 175,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2286,
      "id": 6,
      "keystoneBonus": 1,
      "keystoneLevel": 26,
      "keystoneTime": 2093779,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 180,
    },
  ],
  "region": "EU",
  "startTime": 1639484205713,
  "title": "Mythic+",
}
`;

exports[`/api/report existing report ongoing report - new fights - table request failing for new report 1`] = `
{
  "endTime": 10361293,
  "fightIDs": [
    8,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 8271380,
}
`;

exports[`/api/report existing report ongoing report - new fights - table request failing for new report 2`] = `
{
  "endTime": 19400839,
  "fightIDs": [
    10,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 17890007,
}
`;

exports[`/api/report existing report ongoing report - new fights - table request failing for new report 3`] = `
{
  "endTime": 21815165,
  "fightIDs": [
    11,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 20163668,
}
`;

exports[`/api/report existing report ongoing report - new fights - table request failing for new report 4`] = `
{
  "endTime": 24455197,
  "fightIDs": [
    12,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 22291597,
}
`;

exports[`/api/report existing report ongoing report - new fights - table request failing for new report 5`] = `
{
  "endTime": 1910367,
  "fightIDs": [
    99,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 50329,
}
`;

exports[`/api/report existing report ongoing report - new fights - table request failing for new report 6`] = `
{
  "error": "SECONDARY_REQUEST_FAILED",
}
`;

exports[`/api/report existing report ongoing report - new fights 1`] = `
{
  "endTime": 10361293,
  "fightIDs": [
    8,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 8271380,
}
`;

exports[`/api/report existing report ongoing report - new fights 2`] = `
{
  "endTime": 19400839,
  "fightIDs": [
    10,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 17890007,
}
`;

exports[`/api/report existing report ongoing report - new fights 3`] = `
{
  "endTime": 21815165,
  "fightIDs": [
    11,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 20163668,
}
`;

exports[`/api/report existing report ongoing report - new fights 4`] = `
{
  "endTime": 24455197,
  "fightIDs": [
    12,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 22291597,
}
`;

exports[`/api/report existing report ongoing report - new fights 5`] = `
{
  "endTime": 1910367,
  "fightIDs": [
    99,
  ],
  "reportID": "THJWBAXcn2j9Nvkt",
  "startTime": 50329,
}
`;

exports[`/api/report existing report ongoing report - new fights 6`] = `
{
  "regionUpsert": [
    [
      {
        "create": {
          "slug": "EU",
        },
        "select": {
          "id": true,
        },
        "update": {},
        "where": {
          "slug": "EU",
        },
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 7`] = `
{
  "conduitCreateMany": [
    [
      {
        "data": [
          {
            "icon": "spell_deathknight_subversion",
            "id": 337972,
            "name": "Hardened Bones",
          },
          {
            "icon": "ability_mage_deepfreeze",
            "id": 337988,
            "name": "Everfrost",
          },
          {
            "icon": "ability_deathknight_frozencenter",
            "id": 337822,
            "name": "Accelerated Cold",
          },
          {
            "icon": "spell_deathknight_mindfreeze",
            "id": 337705,
            "name": "Spirit Drain",
          },
          {
            "icon": "ability_mount_goatmountwhite",
            "id": 339895,
            "name": "Repeat Decree",
          },
          {
            "icon": "spell_fel_incinerate",
            "id": 339231,
            "name": "Growing Inferno",
          },
          {
            "icon": "inv_armor_shield_naxxramas_d_01",
            "id": 338671,
            "name": "Fel Defender",
          },
          {
            "icon": "inv_archaeology_orcclans_tattooknife",
            "id": 338682,
            "name": "Viscous Ink",
          },
          {
            "icon": "ability_warrior_shieldmastery",
            "id": 334993,
            "name": "Stalwart Guardian",
          },
          {
            "icon": "warrior_talent_icon_skirmisher",
            "id": 335232,
            "name": "Ashen Juggernaut",
          },
          {
            "icon": "ability_toughness",
            "id": 335034,
            "name": "Inspiring Presence",
          },
          {
            "icon": "spell_shadow_summonimp",
            "id": 337162,
            "name": "Depths of Insanity",
          },
          {
            "icon": "spell_animarevendreth_groundstate",
            "id": 340212,
            "name": "Hallowed Discernment",
          },
          {
            "icon": "achievement_dungeon_heroic_gloryoftheraider",
            "id": 339316,
            "name": "Echoing Blessings",
          },
          {
            "icon": "inv_lightforgedmatrixability_lightsjudgment",
            "id": 339268,
            "name": "Light's Barding",
          },
          {
            "icon": "item_holyspark",
            "id": 339984,
            "name": "Focused Light",
          },
          {
            "icon": "ability_vehicle_sonicshockwave",
            "id": 338787,
            "name": "Shielding Words",
          },
          {
            "icon": "inv_axe_02",
            "id": 0,
            "name": "Unknown Ability",
          },
          {
            "icon": "spell_frost_frostblast",
            "id": 336569,
            "name": "Ice Bite",
          },
          {
            "icon": "rogue_burstofspeed",
            "id": 337275,
            "name": "Incantation of Swiftness",
          },
          {
            "icon": "spell_frost_coldhearted",
            "id": 336522,
            "name": "Icy Propulsion",
          },
        ],
        "skipDuplicates": true,
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 8`] = `
{
  "talentCreateMany": [
    [
      {
        "data": [
          {
            "classID": 12,
            "icon": "spell_frost_frozencore",
            "id": 281208,
            "name": "Cold Heart",
            "specID": 36,
          },
          {
            "classID": 12,
            "icon": "boss_odunrunes_blue",
            "id": 207104,
            "name": "Runic Attenuation",
            "specID": 36,
          },
          {
            "classID": 12,
            "icon": "spell_frost_chillingblast",
            "id": 207167,
            "name": "Blinding Sleet",
            "specID": 36,
          },
          {
            "classID": 12,
            "icon": "spell_frost_icestorm",
            "id": 207142,
            "name": "Avalanche",
            "specID": 36,
          },
          {
            "classID": 12,
            "icon": "inv_helm_plate_raiddeathknight_p_01",
            "id": 212552,
            "name": "Wraith Walk",
            "specID": 36,
          },
          {
            "classID": 12,
            "icon": "spell_frost_ice-shards",
            "id": 194912,
            "name": "Gathering Storm",
            "specID": 36,
          },
          {
            "classID": 12,
            "icon": "spell_deathknight_breathofsindragosa",
            "id": 152279,
            "name": "Breath of Sindragosa",
            "specID": 36,
          },
          {
            "classID": 9,
            "icon": "achievment_raid_houroftwilight",
            "id": 207548,
            "name": "Agonizing Flames",
            "specID": 26,
          },
          {
            "classID": 9,
            "icon": "spell_fire_elementaldevastation",
            "id": 207739,
            "name": "Burning Alive",
            "specID": 26,
          },
          {
            "classID": 9,
            "icon": "ability_warlock_backdraft",
            "id": 336639,
            "name": "Charred Flesh",
            "specID": 26,
          },
          {
            "classID": 9,
            "icon": "ability_creature_felsunder",
            "id": 263642,
            "name": "Fracture",
            "specID": 26,
          },
          {
            "classID": 9,
            "icon": "ability_demonhunter_sigilofchains",
            "id": 202138,
            "name": "Sigil of Chains",
            "specID": 26,
          },
          {
            "classID": 9,
            "icon": "spell_shadow_demonform",
            "id": 321453,
            "name": "Demonic",
            "specID": 26,
          },
          {
            "classID": 9,
            "icon": "inv_glaive_1h_artifactaldorchi_d_06",
            "id": 209258,
            "name": "Last Resort",
            "specID": 26,
          },
          {
            "classID": 1,
            "icon": "ability_warrior_improveddisciplines",
            "id": 280721,
            "name": "Sudden Death",
            "specID": 2,
          },
          {
            "classID": 1,
            "icon": "spell_impending_victory",
            "id": 202168,
            "name": "Impending Victory",
            "specID": 2,
          },
          {
            "classID": 1,
            "icon": "inv_sword_48",
            "id": 206315,
            "name": "Massacre",
            "specID": 2,
          },
          {
            "classID": 1,
            "icon": "ability_rogue_preparation",
            "id": 208154,
            "name": "Warpaint",
            "specID": 2,
          },
          {
            "classID": 1,
            "icon": "spell_nature_focusedmind",
            "id": 335070,
            "name": "Cruelty",
            "specID": 2,
          },
          {
            "classID": 1,
            "icon": "ability_warrior_bladestorm",
            "id": 46924,
            "name": "Bladestorm",
            "specID": 2,
          },
          {
            "classID": 1,
            "icon": "warrior_talent_icon_angermanagement",
            "id": 152278,
            "name": "Anger Management",
            "specID": 2,
          },
          {
            "classID": 10,
            "icon": "ability_paladin_swiftretribution",
            "id": 196926,
            "name": "Crusader's Might",
            "specID": 29,
          },
          {
            "classID": 10,
            "icon": "spell_holy_divineprovidence",
            "id": 183778,
            "name": "Judgment of Light",
            "specID": 29,
          },
          {
            "classID": 10,
            "icon": "ability_paladin_blindinglight",
            "id": 115750,
            "name": "Blinding Light",
            "specID": 29,
          },
          {
            "classID": 10,
            "icon": "spell_holy_holyguidance",
            "id": 114154,
            "name": "Unbreakable Spirit",
            "specID": 29,
          },
          {
            "classID": 10,
            "icon": "ability_paladin_holyavenger",
            "id": 105809,
            "name": "Holy Avenger",
            "specID": 29,
          },
          {
            "classID": 10,
            "icon": "inv_helm_plate_raidpaladin_n_01",
            "id": 248033,
            "name": "Awakening",
            "specID": 29,
          },
          {
            "classID": 10,
            "icon": "ability_paladin_beaconsoflight",
            "id": 156910,
            "name": "Beacon of Faith",
            "specID": 29,
          },
          {
            "classID": 2,
            "icon": "achievement_dungeon_frozenthrone",
            "id": 205024,
            "name": "Lonely Winter",
            "specID": 5,
          },
          {
            "classID": 2,
            "icon": "spell_arcane_massdispel",
            "id": 212653,
            "name": "Shimmer",
            "specID": 5,
          },
          {
            "classID": 2,
            "icon": "spell_mage_runeofpower",
            "id": 116011,
            "name": "Rune of Power",
            "specID": 5,
          },
          {
            "classID": 2,
            "icon": "spell_frost_frostblast",
            "id": 278309,
            "name": "Chain Reaction",
            "specID": 5,
          },
          {
            "classID": 2,
            "icon": "spell_frost_ring-of-frost",
            "id": 113724,
            "name": "Ring of Frost",
            "specID": 5,
          },
          {
            "classID": 2,
            "icon": "spell_frost_ice-shards",
            "id": 56377,
            "name": "Splitting Ice",
            "specID": 5,
          },
          {
            "classID": 2,
            "icon": "spell_mage_thermalvoid",
            "id": 155149,
            "name": "Thermal Void",
            "specID": 5,
          },
        ],
        "skipDuplicates": true,
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 9`] = `
{
  "covenantTraitCreateMany": [
    [
      {
        "data": [
          {
            "covenantID": 4,
            "icon": "inv_helm_crown_c_01_black",
            "id": 323921,
            "name": "Emeni's Magnificent Skin",
          },
          {
            "covenantID": 4,
            "icon": "trade_archaeology_vrykul_runestick",
            "id": 342156,
            "name": "Lead by Example",
          },
          {
            "covenantID": 4,
            "icon": "spell_nzinsanity_leadenfoot",
            "id": 323918,
            "name": "Gristled Toes",
          },
          {
            "covenantID": 4,
            "icon": "item_alchemiststonec",
            "id": 324441,
            "name": "Hearth Kidneystone",
          },
          {
            "covenantID": 1,
            "icon": "spell_arcane_focusedpower",
            "id": 328261,
            "name": "Focusing Mantra",
          },
          {
            "covenantID": 1,
            "icon": "inv_misc_bag_14",
            "id": 328263,
            "name": "Cleansed Vestments",
          },
          {
            "covenantID": 1,
            "icon": "ability_hunter_readiness",
            "id": 328257,
            "name": "Let Go of the Past",
          },
          {
            "covenantID": 1,
            "icon": "spell_animabastion_buff",
            "id": 328266,
            "name": "Combat Meditation",
          },
          {
            "covenantID": 2,
            "icon": "ability_rogue_bloodsplatter",
            "id": 331586,
            "name": "Thrill Seeker",
          },
          {
            "covenantID": 2,
            "icon": "sha_ability_rogue_bloodyeye_nightmare",
            "id": 331582,
            "name": "Familiar Predicaments",
          },
          {
            "covenantID": 2,
            "icon": "spell_shadow_deathsembrace",
            "id": 331576,
            "name": "Agent of Chaos",
          },
          {
            "covenantID": 2,
            "icon": "ability_rogue_dirtydeeds",
            "id": 331579,
            "name": "Friends in Low Places",
          },
          {
            "covenantID": 2,
            "icon": "spell_lifegivingspeed",
            "id": 336147,
            "name": "Leisurely Gait",
          },
          {
            "covenantID": 2,
            "icon": "archaeology_5_0_umbrellaofchiji",
            "id": 336239,
            "name": "Soothing Shade",
          },
          {
            "covenantID": 2,
            "icon": "inv_drink_23",
            "id": 319983,
            "name": "Wasteland Propriety",
          },
          {
            "covenantID": 2,
            "icon": "achievement_guildperk_bountifulbags",
            "id": 336184,
            "name": "Exquisite Ingredients",
          },
          {
            "covenantID": 2,
            "icon": "ability_rogue_bloodsplatter",
            "id": 331586,
            "name": "Thrill Seeker",
          },
          {
            "covenantID": 2,
            "icon": "sha_ability_rogue_bloodyeye_nightmare",
            "id": 331582,
            "name": "Familiar Predicaments",
          },
          {
            "covenantID": 2,
            "icon": "spell_shadow_deathsembrace",
            "id": 331576,
            "name": "Agent of Chaos",
          },
          {
            "covenantID": 2,
            "icon": "ability_rogue_dirtydeeds",
            "id": 331579,
            "name": "Friends in Low Places",
          },
        ],
        "skipDuplicates": true,
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 10`] = `
{
  "legendaryCreateMany": [
    [
      {
        "data": [
          {
            "effectIcon": "spell_shadow_focusedpower",
            "effectName": "Koltira's Favor",
            "id": 334583,
            "itemID": 171417,
          },
          {
            "effectIcon": "inv__felbarrage",
            "effectName": "Fiery Soul",
            "id": 337547,
            "itemID": 172321,
          },
          {
            "effectIcon": "inv_60crafted_ring4b",
            "effectName": "Signet of Tormented Kings",
            "id": 335266,
            "itemID": 178926,
          },
          {
            "effectIcon": "ability_paladin_conviction",
            "effectName": "The Mad Paragon",
            "id": 337594,
            "itemID": 171413,
          },
          {
            "effectIcon": "spell_shadow_soulleech_2",
            "effectName": "Freezing Winds",
            "id": 327364,
            "itemID": 173244,
          },
        ],
        "skipDuplicates": true,
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 11`] = `
{
  "reportCreate": [],
}
`;

exports[`/api/report existing report ongoing report - new fights 12`] = `
{
  "serverFindMany": [
    [
      {
        "select": {
          "id": true,
          "name": true,
        },
        "where": {
          "OR": [
            {
              "name": "Hyjal",
              "regionID": 1,
            },
            {
              "name": "Blackmoore",
              "regionID": 1,
            },
            {
              "name": "Ysondre",
              "regionID": 1,
            },
            {
              "name": "Kazzak",
              "regionID": 1,
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 13`] = `
{
  "characterFindMany": [
    [
      {
        "select": {
          "id": true,
          "name": true,
          "serverID": true,
        },
        "where": {
          "OR": [
            {
              "classID": 12,
              "name": "Wânheda",
              "serverID": 1,
            },
            {
              "classID": 9,
              "name": "Xepheris",
              "serverID": 2,
            },
            {
              "classID": 1,
              "name": "Steffen",
              "serverID": 3,
            },
            {
              "classID": 10,
              "name": "Afkdin",
              "serverID": 3,
            },
            {
              "classID": 2,
              "name": "Lorioa",
              "serverID": 4,
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 14`] = `
{
  "playerFindMany": [
    [
      {
        "select": {
          "characterID": true,
          "id": true,
        },
        "where": {
          "OR": [
            {
              "actorID": 10,
              "characterID": 1,
              "covenantID": 4,
              "deaths": 1,
              "dps": 4139,
              "hps": 320,
              "itemLevel": 225,
              "reportID": 1,
              "soulbindID": 5,
              "specID": 36,
            },
            {
              "actorID": 1,
              "characterID": 2,
              "covenantID": 1,
              "deaths": 1,
              "dps": 2775,
              "hps": 1788,
              "itemLevel": 223,
              "reportID": 1,
              "soulbindID": 7,
              "specID": 26,
            },
            {
              "actorID": 11,
              "characterID": 3,
              "covenantID": 2,
              "deaths": 2,
              "dps": 4353,
              "hps": 320,
              "itemLevel": 225,
              "reportID": 1,
              "soulbindID": 8,
              "specID": 2,
            },
            {
              "actorID": 6,
              "characterID": 4,
              "covenantID": 2,
              "deaths": 3,
              "dps": 1624,
              "hps": 2754,
              "itemLevel": 224,
              "reportID": 1,
              "soulbindID": 9,
              "specID": 29,
            },
            {
              "actorID": 2,
              "characterID": 5,
              "covenantID": 2,
              "deaths": 2,
              "dps": 4036,
              "hps": 219,
              "itemLevel": 220,
              "reportID": 1,
              "soulbindID": 8,
              "specID": 5,
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 15`] = `
{
  "fightCreate": [
    [
      {
        "data": {
          "PlayerConduit": {
            "createMany": {
              "data": [
                {
                  "conduitID": 337972,
                  "itemLevel": 226,
                  "playerID": 1,
                },
                {
                  "conduitID": 337988,
                  "itemLevel": 226,
                  "playerID": 1,
                },
                {
                  "conduitID": 337822,
                  "itemLevel": 200,
                  "playerID": 1,
                },
                {
                  "conduitID": 337705,
                  "itemLevel": 213,
                  "playerID": 1,
                },
                {
                  "conduitID": 339895,
                  "itemLevel": 226,
                  "playerID": 2,
                },
                {
                  "conduitID": 339231,
                  "itemLevel": 226,
                  "playerID": 2,
                },
                {
                  "conduitID": 338671,
                  "itemLevel": 226,
                  "playerID": 2,
                },
                {
                  "conduitID": 338682,
                  "itemLevel": 226,
                  "playerID": 2,
                },
                {
                  "conduitID": 334993,
                  "itemLevel": 226,
                  "playerID": 3,
                },
                {
                  "conduitID": 335232,
                  "itemLevel": 226,
                  "playerID": 3,
                },
                {
                  "conduitID": 335034,
                  "itemLevel": 226,
                  "playerID": 3,
                },
                {
                  "conduitID": 337162,
                  "itemLevel": 213,
                  "playerID": 3,
                },
                {
                  "conduitID": 340212,
                  "itemLevel": 200,
                  "playerID": 4,
                },
                {
                  "conduitID": 339316,
                  "itemLevel": 200,
                  "playerID": 4,
                },
                {
                  "conduitID": 339268,
                  "itemLevel": 200,
                  "playerID": 4,
                },
                {
                  "conduitID": 339984,
                  "itemLevel": 200,
                  "playerID": 4,
                },
                {
                  "conduitID": 338787,
                  "itemLevel": 213,
                  "playerID": 4,
                },
                {
                  "conduitID": 0,
                  "itemLevel": 200,
                  "playerID": 5,
                },
                {
                  "conduitID": 336569,
                  "itemLevel": 200,
                  "playerID": 5,
                },
                {
                  "conduitID": 337275,
                  "itemLevel": 213,
                  "playerID": 5,
                },
                {
                  "conduitID": 336522,
                  "itemLevel": 200,
                  "playerID": 5,
                },
              ],
            },
          },
          "PlayerCovenantTrait": {
            "createMany": {
              "data": [
                {
                  "covenantTraitID": 323921,
                  "playerID": 1,
                },
                {
                  "covenantTraitID": 342156,
                  "playerID": 1,
                },
                {
                  "covenantTraitID": 323918,
                  "playerID": 1,
                },
                {
                  "covenantTraitID": 324441,
                  "playerID": 1,
                },
                {
                  "covenantTraitID": 328261,
                  "playerID": 2,
                },
                {
                  "covenantTraitID": 328263,
                  "playerID": 2,
                },
                {
                  "covenantTraitID": 328257,
                  "playerID": 2,
                },
                {
                  "covenantTraitID": 328266,
                  "playerID": 2,
                },
                {
                  "covenantTraitID": 331586,
                  "playerID": 3,
                },
                {
                  "covenantTraitID": 331582,
                  "playerID": 3,
                },
                {
                  "covenantTraitID": 331576,
                  "playerID": 3,
                },
                {
                  "covenantTraitID": 331579,
                  "playerID": 3,
                },
                {
                  "covenantTraitID": 336147,
                  "playerID": 4,
                },
                {
                  "covenantTraitID": 336239,
                  "playerID": 4,
                },
                {
                  "covenantTraitID": 319983,
                  "playerID": 4,
                },
                {
                  "covenantTraitID": 336184,
                  "playerID": 4,
                },
                {
                  "covenantTraitID": 331586,
                  "playerID": 5,
                },
                {
                  "covenantTraitID": 331582,
                  "playerID": 5,
                },
                {
                  "covenantTraitID": 331576,
                  "playerID": 5,
                },
                {
                  "covenantTraitID": 331579,
                  "playerID": 5,
                },
              ],
            },
          },
          "PlayerFight": {
            "createMany": {
              "data": [
                {
                  "playerID": 1,
                },
                {
                  "playerID": 2,
                },
                {
                  "playerID": 3,
                },
                {
                  "playerID": 4,
                },
                {
                  "playerID": 5,
                },
              ],
            },
          },
          "PlayerLegendary": {
            "createMany": {
              "data": [
                {
                  "legendaryID": 334583,
                  "playerID": 1,
                },
                {
                  "legendaryID": 337547,
                  "playerID": 2,
                },
                {
                  "legendaryID": 335266,
                  "playerID": 3,
                },
                {
                  "legendaryID": 337594,
                  "playerID": 4,
                },
                {
                  "legendaryID": 327364,
                  "playerID": 5,
                },
              ],
            },
          },
          "PlayerTalent": {
            "createMany": {
              "data": [
                {
                  "playerID": 1,
                  "talentID": 281208,
                },
                {
                  "playerID": 1,
                  "talentID": 207104,
                },
                {
                  "playerID": 1,
                  "talentID": 207167,
                },
                {
                  "playerID": 1,
                  "talentID": 207142,
                },
                {
                  "playerID": 1,
                  "talentID": 212552,
                },
                {
                  "playerID": 1,
                  "talentID": 194912,
                },
                {
                  "playerID": 1,
                  "talentID": 152279,
                },
                {
                  "playerID": 2,
                  "talentID": 207548,
                },
                {
                  "playerID": 2,
                  "talentID": 207739,
                },
                {
                  "playerID": 2,
                  "talentID": 336639,
                },
                {
                  "playerID": 2,
                  "talentID": 263642,
                },
                {
                  "playerID": 2,
                  "talentID": 202138,
                },
                {
                  "playerID": 2,
                  "talentID": 321453,
                },
                {
                  "playerID": 2,
                  "talentID": 209258,
                },
                {
                  "playerID": 3,
                  "talentID": 280721,
                },
                {
                  "playerID": 3,
                  "talentID": 202168,
                },
                {
                  "playerID": 3,
                  "talentID": 206315,
                },
                {
                  "playerID": 3,
                  "talentID": 208154,
                },
                {
                  "playerID": 3,
                  "talentID": 335070,
                },
                {
                  "playerID": 3,
                  "talentID": 46924,
                },
                {
                  "playerID": 3,
                  "talentID": 152278,
                },
                {
                  "playerID": 4,
                  "talentID": 196926,
                },
                {
                  "playerID": 4,
                  "talentID": 183778,
                },
                {
                  "playerID": 4,
                  "talentID": 115750,
                },
                {
                  "playerID": 4,
                  "talentID": 114154,
                },
                {
                  "playerID": 4,
                  "talentID": 105809,
                },
                {
                  "playerID": 4,
                  "talentID": 248033,
                },
                {
                  "playerID": 4,
                  "talentID": 156910,
                },
                {
                  "playerID": 5,
                  "talentID": 205024,
                },
                {
                  "playerID": 5,
                  "talentID": 212653,
                },
                {
                  "playerID": 5,
                  "talentID": 116011,
                },
                {
                  "playerID": 5,
                  "talentID": 278309,
                },
                {
                  "playerID": 5,
                  "talentID": 113724,
                },
                {
                  "playerID": 5,
                  "talentID": 56377,
                },
                {
                  "playerID": 5,
                  "talentID": 155149,
                },
              ],
            },
          },
          "Report": {
            "connect": {
              "id": 1,
            },
          },
          "averageItemLevel": 223.4,
          "chests": 1,
          "dps": 16927,
          "dungeon": {
            "connect": {
              "id": 2289,
            },
          },
          "endTime": 1910367,
          "fightID": 99,
          "hps": 5401,
          "keystoneLevel": 17,
          "keystoneTime": 1896314,
          "percent": 0,
          "rating": 137,
          "startTime": 50329,
          "totalDeaths": 9,
        },
      },
    ],
  ],
}
`;

exports[`/api/report existing report ongoing report - new fights 16`] = `
{
  "affixes": [
    10,
    11,
    124,
    121,
  ],
  "endTime": 1625344842249,
  "fights": [
    {
      "averageItemLevel": 249.4,
      "dungeon": 2285,
      "id": 1,
      "keystoneBonus": 1,
      "keystoneLevel": 23,
      "keystoneTime": 2035534,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 166,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2286,
      "id": 2,
      "keystoneBonus": 2,
      "keystoneLevel": 23,
      "keystoneTime": 1700172,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 167,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2289,
      "id": 3,
      "keystoneBonus": 1,
      "keystoneLevel": 24,
      "keystoneTime": 2126854,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 170,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2286,
      "id": 4,
      "keystoneBonus": 1,
      "keystoneLevel": 25,
      "keystoneTime": 1917470,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 176,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2285,
      "id": 5,
      "keystoneBonus": 1,
      "keystoneLevel": 25,
      "keystoneTime": 2339707,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 175,
    },
    {
      "averageItemLevel": 249.4,
      "dungeon": 2286,
      "id": 6,
      "keystoneBonus": 1,
      "keystoneLevel": 26,
      "keystoneTime": 2093779,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 7,
          "spec": 21,
        },
        {
          "class": 3,
          "spec": 8,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 180,
    },
    {
      "averageItemLevel": 223.4,
      "dungeon": 2289,
      "id": 99,
      "keystoneBonus": 1,
      "keystoneLevel": 17,
      "keystoneTime": 1896314,
      "player": [
        {
          "class": 9,
          "spec": 26,
        },
        {
          "class": 10,
          "spec": 29,
        },
        {
          "class": 12,
          "spec": 36,
        },
        {
          "class": 1,
          "spec": 2,
        },
        {
          "class": 2,
          "spec": 5,
        },
      ],
      "rating": 137,
    },
  ],
  "region": "EU",
  "startTime": 1625318363957,
  "title": "Mythic+ Dungeons",
}
`;

exports[`/api/report warcraftlogs failure empty fights 1`] = `
{
  "error": "BROKEN_LOG_OR_WCL_UNAVAILABLE",
}
`;

exports[`/api/report warcraftlogs failure entirely empty response 1`] = `
{
  "error": "BROKEN_LOG_OR_WCL_UNAVAILABLE",
}
`;

exports[`/api/report warcraftlogs failure report endTime identical to startTime 1`] = `
{
  "error": "EMPTY_LOG",
}
`;
